# zarrnii

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  README.md  example_5d_usage.py  imaris_analysis_report.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  test_our_imaris.py  test_reproduce_issue.py
.github/: copilot-instructions.md
.github/workflows/: bump_version.yml  ci.yml  dependencies.yml  gh-pages.yml  release.yml  security.yml
bids_ngff_tools/: main.py
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: changelog.md  cli.md  contributing.md  faq.md  index.md  memory_safe_imaris.md  reference.md
docs/examples/: atlas_example.md  downsampling.md  imaris_usage.md  ml_patch_sampling.md  multiscale.md  near_isotropic.md  ngff_api.md  scaled_processing.md  segmentation_example.md  stardist_segmentation.md  transformations.md  zarr_nifti.md
docs/plugins/: multiotsu_segmentation.md
docs/reference/: analysis.md  atlas.md  benchmark.md  core.md  dask_utils.md  destripe.md  enums.md  index.md  plugins.md  transform.md  zarrnii.md
docs/walkthrough/: advanced_use_cases.md  basic_tasks.md  benchmarking.md  getting_started.md  overview.md
examples/: chainable_api_demo.py  histogram_analysis_demo.py  memory_safe_imaris_export.py  mip_intensity_rescaling_demo.py  mip_visualization_demo.py  multiotsu_plugin_example.py  new_api_demonstration.py  ome_zarr_write_demo.py  visualization_demo.py  zipstore_demo.py
examples/atlas_example/: index.html
examples/downsampling/: index.html
examples/imaris_usage/: index.html
examples/ml_patch_sampling/: index.html
examples/multiscale/: index.html
examples/near_isotropic/: index.html
examples/scaled_processing/: index.html
examples/segmentation_example/: index.html
examples/transformations/: index.html
examples/zarr_nifti/: index.html
faq/: index.html
notebooks/: example_transform.ipynb  scratch_extractsubvol.ipynb  test_destripe.ipynb
ome_zarr_neuro/: __init__.py  dask_image.py  enums.py  io.py  scratch_extractsubvol.ipynb  test_readwrite.py  transform.py
reference/: index.html
reference/analysis/: index.html
reference/atlas/: index.html
reference/benchmark/: index.html
reference/core/: index.html
reference/dask_utils/: index.html
reference/destripe/: index.html
reference/enums/: index.html
reference/plugins/: index.html
reference/transform/: index.html
reference/zarrnii/: index.html
scripts/: README.md  quality-check-strict.sh  quality-check.sh
scripts/imaris_analysis/: final_comparison.py  imaris_comparison.py  test_improved_imaris.py  test_our_imaris.py
search/: search_index.json
test.ome.zarr/: .zattrs  .zmetadata
test.ome.zarr/scale0/: .zattrs
test.ome.zarr/scale0/image/: .zarray
test.ome.zarr/scale0/image/0/0/0/: 0
test_channels.ome.zarr/: .zattrs  .zmetadata
test_channels.ome.zarr/scale0/image/: .zarray
test_channels.ome.zarr/scale0/image/0/0/0/: 0
tests/: PtK2Cell.ims  conftest.py  synthetic_ome_zarr.py  test_5d_coverage.py  test_5d_support.py  test_analysis.py  test_atlas.py  test_atlas_old.py  test_axes_units.py  test_centroids.py  test_chainable.py  test_channel_selection.py  test_cli.py  test_compatibility.py  test_core_coverage.py  test_dask_delegation.py  test_dask_utils.py  test_density_from_points.py  test_destripe.py  test_downsample.py  test_enums.py  test_from_tif_stack.py  test_imaris.py  test_imaris_3d_tiling.py  test_imaris_memory_safe.py  test_imaris_pyramid.py  test_interp_by_block.py  test_io.py  test_logging.py  test_mip_enhanced.py  test_mip_lazy.py  test_mip_visualization.py  test_multiotsu_plugin.py  test_ngff_core.py  test_nifti_channels.py  test_ome_tif.py  test_omero_helper.py  test_plugin_manager.py  test_repr.py  test_sample_at_points.py  (+9 more)
tests/data/sub-AS36F2_sample-brain_acq-downsampled_SPIM.ome.zarr/: .zattrs
walkthrough/advanced_use_cases/: index.html
walkthrough/basic_tasks/: index.html
walkthrough/benchmarking/: index.html
walkthrough/getting_started/: index.html
walkthrough/overview/: index.html
zarrnii/: __init__.py  _version.py  analysis.py  atlas.py  benchmark.py  cli.py  core.py  core_backup.py  core_old.py  dask_utils.py  destripe.py  enums.py  io.py  logging.py  ngff_chainable.py  ngff_core.py  ngff_transforms.py  processing.py  scratch_extractsubvol.ipynb  transform.py  utils.py  visualization.py  zarrnii.py
zarrnii/data/: __init__.py
zarrnii/data/atlases/: __init__.py
zarrnii/data/templates/: __init__.py
zarrnii/data/templates/placeholder/: __init__.py  template_info.yaml
zarrnii/data/templates/tpl-placeholder/: __init__.py  template_description.json  tpl-placeholder_atlas-regions_dseg.tsv
zarrnii/plugins/: __init__.py  hookspecs.py  markers.py  plugin_manager.py
zarrnii/plugins/scaled_processing/: __init__.py  base.py  bias_field.py  gaussian_biasfield.py  n4_biasfield.py  segmentation_cleaner.py
zarrnii/plugins/segmentation/: __init__.py  base.py  local_otsu.py  multiotsu.py  otsu.py  stardist.py  threshold.py
zarrnii_plugin_api/: __init__.py  hookspecs.py
